# ege-gosuslugi-ahent-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: admission.py
tests/: test_admission.py
